--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Tasks</h1>
+<h1>Day4,5 Rails SQL git</h1>
 <%= link_to 'new', new_task_path %>
 <ul>
   <% @tasks.each do |task| %>
@@ -10,4 +10,6 @@
     </li>
   <% end %>
 </ul>
+
+
 
