--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,9 +1,8 @@
-<h1>Day4,5 Rails SQL git</h1>
-<%= link_to 'new', new_task_path %>
+<h1>Ruby on Rails</h1>
+<%= link_to '掲示板', new_task_path %>
 <ul>
   <% @tasks.each do |task| %>
     <li>
-      <%= check_box_tag '', '' %>
       <%= task.title %>
       <%= link_to '[edit]', edit_task_path(task) %>
       <%= link_to '[destroy]', task_path(task), data: {turbo_method: 'delete',turbo_confirm: 'Are you sure?'} %>
