--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Ruby on Rails</h1>
-<%= link_to '掲示板', new_task_path %>
+<%= link_to '新しい投稿', new_task_path %>
 <ul>
   <% @tasks.each do |task| %>
     <li>
